# Report-Generator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_FEATURES.md  AUTOMATE.md  BEST_PRACTICES.md  CHANGELOG.md  Dockerfile  EXCEL_LAYOUT.txt  JINJA2_CHEATSHEET.txt  PRODUCTION_TEMPLATE_GUIDE.txt  README.md  app.py  appendix_generator.py  audit_trail.py  compliance_helpers.py  deliverable_pack.py  docker-compose.yml  docker-entrypoint.sh  dwda_calculations.py  dwda_compliance.py  ecoventure_workbook.py  engine.py  esa_auth.py  esa_launcher.py  esa_logging.py  esa_observability.py  esa_rate_limit.py  esa_tenant.py  field_validation.py  groundwater_compliance.py  groundwater_narrative.py  job_queue.py  packages.txt  phase1_decision.py  phase1_markup.py  phase1_narrative.py  phase1_pdf_text.py  phase2_compliance.py  phase2_narrative.py  (+19 more)
.github/: pull_request_template.md
.streamlit/: config.production.toml.example  config.toml  secrets.toml.example
ai/: __init__.py  apec_extract.py  appendix_classifier.py  apply_drafts.py  client.py  config.py  consistency.py  copilot.py  docx_extract.py  exceedance_notes.py  excel_builder.py  gw_trends.py  lab_extract.py  models.py  narrative.py  ocr.py  rag.py  source_ingest.py  template_tagger.py  well_log_extract.py
automate/: __init__.py  http_server.py  multipart.py  render.py
docs/: 00-start-here.md  01-overview.md  02-user-guide.md  03-excel-data-guide.md  04-template-authoring.md  05-developer-guide.md  06-api-reference.md  07-security-and-deployment.md  08-testing.md  09-ai-assistant.md  10-glossary-faq.md  14-deployment.md  (+15 more)
(+219 files in other folders)
